// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros client-side: client-side 1`] = `

import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation")

      ↓ ↓ ↓ ↓ ↓ ↓

import __a from "./a.ssr-computation";
import { useSSRComputation_Server } from "use-ssr-computation.macro/lib/runtime/useSSRComputation";
const x = useSSRComputation_Server(__a, "./a.ssr-computation");


`;

exports[`macros multiple-imports: multiple-imports 1`] = `

import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation")
const y = useSSRComputation("./a.ssr-computation")

      ↓ ↓ ↓ ↓ ↓ ↓

import { useSSRComputation_Client } from "use-ssr-computation.macro/lib/runtime/useSSRComputation";
const x = useSSRComputation_Client("./a.ssr-computation");
const y = useSSRComputation_Client("./a.ssr-computation");


`;

exports[`macros no usage: no usage 1`] = `

import { useSSRComputation } from "../lib/index.macro"

      ↓ ↓ ↓ ↓ ↓ ↓



`;

exports[`macros server-side: server-side 1`] = `

import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation");

      ↓ ↓ ↓ ↓ ↓ ↓

import { useSSRComputation_Client } from "use-ssr-computation.macro/lib/runtime/useSSRComputation";
const x = useSSRComputation_Client("./a.ssr-computation");


`;
